# ansi_iso_accuracy_test

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  LICENSE.txt  README.md  conanfile.py
cmake/: ansiiso_accuracy_test_lib-config.cmake.in  clang-format.cmake  clang-tidy.cmake
cmake/documentation/: DecorateDoxygen.cmake  DecorateMdPagesAsGroups.cmake  DecoratePlantUMLForDoxygen.cmake  DecorateRemoveDeletedFunctions.cmake  DocumentationConfig.in  DoxygenCMakeLists.txt.in  InstallationScript.cmake.in  TargetDocumentation.cmake  defaultDoxygenConfig.cmake  defaultDoxygenFinalConfig.in  doxygenConfig.in
include/innovatrics/: ansiiso.hpp  ansiiso_accuracy_test.hpp
src/: Application.cpp  Application.hpp  Main.cpp  config.hpp.in
src/AnsiIso/: AnsiIso.cpp  AnsiIso.hpp  AnsiIsoInterface.hpp  AnsiIsoNativeInterface.hpp
src/Biometric/: AnsiIsoBiometric.hpp  Biometric.hpp  BiometricResult.hpp
src/CSV/: CSVIterator.hpp  CSVRange.hpp  CSVReader.hpp  CSVRow.hpp
src/Configuration/: CLIConfiguration.hpp  Configuration.hpp  Options.hpp  ProgramConfiguration.hpp  XMLConfiguration.hpp
src/Filesystem/: BoostDirectory.hpp  BoostFilesystem.hpp  BoostMMFile.hpp  Directory.hpp  File.hpp  Filesystem.hpp
src/Logger/: BoostLogger.hpp  Logger.hpp
src/Record/: BiometricRecord.hpp  Record.hpp
src/Storage/: BiometricStorage.hpp  FileStorage.hpp  OutputStorageFactory.hpp  Storage.hpp  StorageFactory.hpp
test/: CMakeLists.txt  TestBase.cpp
test/Configuration/: Test_CLIconfiguration.cpp
test/Mock/: MockDirectory.hpp  MockFile.hpp  MockFilesystem.hpp  MockLogger.hpp  MockPath.hpp
test/Storage/: Test_FileStorage.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
